Did html work on index.html and store.html. Created discography.html for listing albums

--- a/store.html
+++ b/store.html
@@ -1,1 +1,136 @@
 <!DOCTYPE html>
+<html>
+
+<head>
+    <title>Blind Guardian | Store</title>
+    <meta name="description" content="This is the description">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="store.html">Store</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+        <hr>
+        <h1>Blind Guardian</h1>
+    </header>
+    <section>
+        <h2>MUSIC</h2>
+        <div>
+            <div><strong>Live Beyond the Spheres</strong></div>
+            <img src="images\live-beyond-the-spheres-150x150.jpg" alt="">
+            <div>
+                <span>$20.99</span>
+                <button>ADD TO CART</button>
+            </div>
+        </div>
+
+        <div>
+            <div><strong>Beyond the Red Mirror</strong></div>
+            <img src="images/beyond_the_red_mirror_earbook-150x150.jpg" alt="">
+            <div>
+                <span>$17.99</span>
+                <button>ADD TO CART</button>
+            </div>
+        </div>
+
+        <div>
+            <div><strong>Memories of a Time to Come</strong></div>
+            <img src="images/memoriesofatimetocome-small.jpg" alt="">
+            <div>
+                <span>$15.99</span>
+                <button>ADD TO CART</button>
+            </div>
+        </div>
+
+        <div>
+            <div><strong>At the Edge of Time</strong></div>
+            <img src="images/attheedgeoftime-small.jpg" alt="">
+            <div>
+                <span>$13.99</span>
+                <button>ADD TO CART</button>
+            </div>
+        </div>
+
+    </section>
+    <section>
+        <h2>MERCH</h2>
+        <div>
+            <div><strong>Hoodie</strong></div>
+            <img src="images/beyondtheredmirror-hoodie.png" alt="">
+            <div>
+                <span>34.99</span>
+                <button>ADD TO CART</button>
+            </div>
+        </div>
+
+        <div>
+            <div><strong>Shirt</strong></div>
+            <img src="images/imaginationsfromtheotherside-shirt.png" alt="">
+            <div>
+                <span>$20.99</span>
+                <button>ADD TO CART</button>
+            </div>
+        </div>
+    </section>
+    <section>
+        <h2>CART</h2>
+        <div>
+            <strong>ITEM</strong>
+            &lt;&gt;
+            <strong>PRICE</strong>
+            &lt;&gt;
+            <strong>QUANTITY</strong>
+        </div>
+        <div>
+            <img src="images/imaginationsfromtheotherside-shirt.png" width="100">
+            <span>Shirt</span>
+            &lt;&gt;
+            <span>$20.99</span>
+            &lt;&gt;
+            <input type="number" value="1">
+            <button>REMOVE</button>
+        </div>
+
+        <div>
+            <img src="images/beyondtheredmirror-hoodie.png" width="100">
+            <span>Shirt</span>
+            &lt;&gt;
+            <span>$34.99</span>
+            &lt;&gt;
+            <input type="number" value="1">
+            <button>REMOVE</button>
+        </div>
+        <hr>
+        <div>
+            <strong>TOTAL</strong>
+            <span>$55.98</span>
+        </div>
+        <button>PURCHASE</button>
+    </section>
+    <footer>
+        <h3>Blind Guardian</h3>
+        <ul>
+            <li><a href="https://www.youtube.com/user/blindguardian" target="_blank">
+                    <img src="images/YouTube Logo.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://open.spotify.com/artist/7jxJ25p0pPjk0MStloN6o6" target="_blank">
+                    <img src="images/Spotify Logo.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/blindguardian/" target="_blank">    
+                    <img src="images/Facebook Logo.png">
+                </a>
+            </li>
+        </ul>
+    </footer>
+</body>
+
+</html>
