Removed about.html. Added band.html and discography.html. Add album info and art to discography page. Update all pages’ navigation headers.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
             <nav>
                 <ul>
                         <li><a href="index.html">Home</a></li>
+                        <li><a href="discography.html">Discography</a></li>
+                        <li><a href="band.html">Band</a></li>
                         <li><a href="store.html">Store</a></li>
-                        <li><a href="about.html">About</a></li>
+                        
                 </ul>
             </nav>
             <hr>
