--- a/store.html
+++ b/store.html
@@ -10,9 +10,11 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="store.html">Store</a></li>
-                <li><a href="about.html">About</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="discography.html">Discography</a></li>
+                    <li><a href="band.html">Band</a></li>
+                    <li><a href="store.html">Store</a></li>
+                    
             </ul>
         </nav>
         <hr>
