Added Lorem ispsum place holder text and images of the band to the band page

--- a/band.html
+++ b/band.html
@@ -1,21 +1,99 @@
 <!DOCTYPE html>
 <html>
-    <head>
-<title>Blind Guardian | Band</title>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="discography.html">Discography</a></li>
-                        <li><a href="band.html">Band</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        
-                </ul>
-            </nav>
-            <hr>
-            <h1>Blind Guardian</h1>
-        </header>
-    </body>
+
+<head>
+    <title>Blind Guardian | Band</title>
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discography.html">Discography</a></li>
+                <li><a href="band.html">Band</a></li>
+                <li><a href="store.html">Store</a></li>
+
+            </ul>
+        </nav>
+        <hr>
+        <h1>Blind Guardian</h1>
+    </header>
+
+    <section>
+        <h2>Hansi Kürsch</h2>
+        <div>
+            <img src="images/hansiKursch.pgn.jpg">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Tincidunt augue interdum velit euismod in. Leo a diam sollicitudin tempor id eu
+                nisl nunc mi. Eu scelerisque felis imperdiet proin fermentum leo vel. Amet aliquam id diam maecenas
+                ultricies mi eget mauris pharetra. Pharetra convallis posuere morbi leo urna molestie. Diam maecenas
+                ultricies mi eget mauris pharetra et ultrices. Facilisis sed odio morbi quis commodo odio. Quis
+                imperdiet massa tincidunt nunc. Risus quis varius quam quisque id diam vel.</p>
+        </div>
+        <hr>
+    </section>
+
+    <section>
+        <h2>Andrè Olbrich</h2>
+        <div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Est placerat in egestas erat imperdiet sed euismod nisi. Ut etiam sit amet nisl
+                purus in. Dolor morbi non arcu risus quis varius. Lorem dolor sed viverra ipsum. Ut morbi tincidunt
+                augue interdum velit euismod in pellentesque massa. Gravida quis blandit turpis cursus. Nam libero justo
+                laoreet sit amet. Ac tincidunt vitae semper quis. Id consectetur purus ut faucibus pulvinar elementum.
+                Sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Ut diam quam nulla porttitor
+                massa. Commodo viverra maecenas accumsan lacus vel.</p>
+            <img src="images/andreOlbrich.pgn.jpg">
+        </div>
+        <hr>
+    </section>
+
+    <h2>Marcus Siepen</h2>
+    <div>
+        <img src="images/marcusSiepen.pgn.jpg">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. At tellus at urna condimentum mattis pellentesque id nibh. Elit eget gravida cum sociis
+            natoque penatibus et. Sed pulvinar proin gravida hendrerit lectus. Arcu vitae elementum curabitur vitae nunc
+            sed. Mattis nunc sed blandit libero. Enim nec dui nunc mattis enim ut tellus. Velit sed ullamcorper morbi
+            tincidunt ornare massa eget egestas. Amet mauris commodo quis imperdiet massa. Consequat id porta nibh
+            venenatis cras sed felis. Suspendisse sed nisi lacus sed viverra. Elementum curabitur vitae nunc sed velit
+            dignissim sodales.</p>
+    </div>
+    <hr>
+    </section>
+
+    <h2>Frederik Ehmke</h2>
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Sagittis purus sit amet volutpat consequat. In eu mi bibendum neque egestas congue quisque
+            egestas. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Lobortis mattis aliquam faucibus purus
+            in massa. Gravida arcu ac tortor dignissim convallis. Ornare suspendisse sed nisi lacus sed viverra. Sit
+            amet mauris commodo quis imperdiet. Gravida quis blandit turpis cursus in hac. Vitae semper quis lectus
+            nulla at volutpat diam.</p>
+        <img src="images/frederikEhmke.pgn.jpg">
+    </div>
+    </section>
+
+    <footer>
+        <h3>Blind Guardian</h3>
+        <ul>
+            <li><a href="https://www.youtube.com/user/blindguardian" target="_blank">
+                    <img src="images/YouTube Logo.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://open.spotify.com/artist/7jxJ25p0pPjk0MStloN6o6" target="_blank">
+                    <img src="images/Spotify Logo.png">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.facebook.com/blindguardian/" target="_blank">
+                    <img src="images/Facebook Logo.png">
+                </a>
+            </li>
+        </ul>
+    </footer>
+</body>
+
 </html>
