Updated all footers and headers on all pages. Did the html and css for the tour page.

--- a/store.html
+++ b/store.html
@@ -4,21 +4,21 @@
 <head>
     <title>Blind Guardian | Store</title>
     <meta name="description" content="This is the description">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
-        <nav>
+    <header class="main-header">
+        <nav class="nav main-nav">
             <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="discography.html">Discography</a></li>
-                    <li><a href="band.html">Band</a></li>
-                    <li><a href="store.html">Store</a></li>
-                    
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discography.html">Discography</a></li>
+                <li><a href="band.html">Band</a></li>
+                <li><a href="tour.html">Tour</a></li>
+                <li><a href="store.html">Store</a></li>                    
             </ul>
         </nav>
-        <hr>
-        <h1>Blind Guardian</h1>
+        <h1 class="band-name band-name-large">Blind Guardian</h1>
     </header>
     <section>
         <h2>MUSIC</h2>
@@ -114,24 +114,26 @@
         </div>
         <button>PURCHASE</button>
     </section>
-    <footer>
-        <h3>Blind Guardian</h3>
-        <ul>
-            <li><a href="https://www.youtube.com/user/blindguardian" target="_blank">
-                    <img src="images/YouTube Logo.png">
-                </a>
-            </li>
-            <li>
-                <a href="https://open.spotify.com/artist/7jxJ25p0pPjk0MStloN6o6" target="_blank">
-                    <img src="images/Spotify Logo.png">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/blindguardian/" target="_blank">    
-                    <img src="images/Facebook Logo.png">
-                </a>
-            </li>
-        </ul>
+    <footer class="main-footer">
+        <div class="containter main-footer-container">
+            <h3 class="band-name">Blind Guardian</h3>
+            <ul class="nav footer-nav">
+                <li><a href="https://www.youtube.com/user/blindguardian" target="_blank">
+                        <img src="images/YouTube Logo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://open.spotify.com/artist/7jxJ25p0pPjk0MStloN6o6" target="_blank">
+                        <img src="images/Spotify Logo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/blindguardian/" target="_blank">
+                        <img src="images/Facebook Logo.png">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </footer>
 </body>
 
