--- a/index.html
+++ b/index.html
@@ -1,55 +1,71 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>Blind Guardian</title>
-        <meta name="description" content = "This is the description">
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header class="main-header">
-            <nav class="nav main-nav">
-                <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="discography.html">Discography</a></li>
-                        <li><a href="band.html">Band</a></li>
-                        <li><a href="store.html">Store</a></li>
-                        
-                </ul>
-            </nav>
-            <h1 class="band-name band-name-large">Blind Guardian</h1>
-        </header>
-        <section class="content-section container">
-            <h2 class="section-header">ABOUT</h2>
-            <img class="about-band-image" src="images/band members.png">
-            <P>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ipsum consequat nisl vel pretium lectus quam id. Eget lorem dolor sed viverra ipsum nunc aliquet. Dui nunc mattis enim ut tellus elementum sagittis vitae. Massa placerat duis ultricies lacus sed turpis tincidunt id. Luctus accumsan tortor posuere ac ut consequat semper viverra nam. Sed velit dignissim sodales ut eu. Tortor at risus viverra adipiscing at. Id volutpat lacus laoreet non curabitur. Ipsum dolor sit amet consectetur adipiscing elit. Pulvinar neque laoreet suspendisse interdum consectetur libero id faucibus. Platea dictumst quisque sagittis purus sit amet volutpat consequat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames. 
-            </P>
-            
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pretium viverra suspendisse potenti nullam ac. Nulla facilisi nullam vehicula ipsum a arcu cursus. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Quam viverra orci sagittis eu volutpat. Mi eget mauris pharetra et ultrices neque ornare aenean euismod. Aliquam ultrices sagittis orci a scelerisque purus semper eget. Scelerisque viverra mauris in aliquam sem fringilla ut. Eget dolor morbi non arcu. Pharetra magna ac placerat vestibulum. Viverra orci sagittis eu volutpat odio facilisis mauris. Fames ac turpis egestas integer. Nunc vel risus commodo viverra.
-            </p>
-        </section>
-        <footer class="main-footer">
-            <div class="containter main-footer-container">
+
+<head>
+    <title>Blind Guardian</title>
+    <meta name="description" content="This is the description">
+    <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+    <header class="main-header">
+        <nav class="nav main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="discography.html">Discography</a></li>
+                <li><a href="band.html">Band</a></li>
+                <li><a href="tour.html">Tour</a></li>
+                <li><a href="store.html">Store</a></li>
+            </ul>
+        </nav>
+        <h1 class="band-name band-name-large">Blind Guardian</h1>
+    </header>
+    <section class="content-section container">
+        <h2 class="section-header">ABOUT</h2>
+        <img class="about-band-image" src="images/band members.png">
+        <P>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ipsum consequat nisl vel pretium lectus quam id. Eget lorem dolor sed viverra ipsum
+            nunc aliquet. Dui nunc mattis enim ut tellus elementum sagittis vitae. Massa placerat duis ultricies lacus
+            sed turpis tincidunt id. Luctus accumsan tortor posuere ac ut consequat semper viverra nam. Sed velit
+            dignissim sodales ut eu. Tortor at risus viverra adipiscing at. Id volutpat lacus laoreet non curabitur.
+            Ipsum dolor sit amet consectetur adipiscing elit. Pulvinar neque laoreet suspendisse interdum consectetur
+            libero id faucibus. Platea dictumst quisque sagittis purus sit amet volutpat consequat. Pellentesque
+            habitant morbi tristique senectus et netus et malesuada fames.
+        </P>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Pretium viverra suspendisse potenti nullam ac. Nulla facilisi nullam vehicula ipsum a
+            arcu cursus. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Quam viverra orci sagittis eu volutpat.
+            Mi eget mauris pharetra et ultrices neque ornare aenean euismod. Aliquam ultrices sagittis orci a
+            scelerisque purus semper eget. Scelerisque viverra mauris in aliquam sem fringilla ut. Eget dolor morbi non
+            arcu. Pharetra magna ac placerat vestibulum. Viverra orci sagittis eu volutpat odio facilisis mauris. Fames
+            ac turpis egestas integer. Nunc vel risus commodo viverra.
+        </p>
+    </section>
+    <footer class="main-footer">
+        <div class="containter main-footer-container">
             <h3 class="band-name">Blind Guardian</h3>
             <ul class="nav footer-nav">
-                    <li><a href="https://www.youtube.com/user/blindguardian" target="_blank">
-                            <img src="images/YouTube Logo.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://open.spotify.com/artist/7jxJ25p0pPjk0MStloN6o6" target="_blank">
-                            <img src="images/Spotify Logo.png">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://www.facebook.com/blindguardian/" target="_blank">    
-                            <img src="images/Facebook Logo.png">
-                        </a>
-                    </li>
+                <li><a href="https://www.youtube.com/user/blindguardian" target="_blank">
+                        <img src="images/YouTube Logo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://open.spotify.com/artist/7jxJ25p0pPjk0MStloN6o6" target="_blank">
+                        <img src="images/Spotify Logo.png">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/blindguardian/" target="_blank">
+                        <img src="images/Facebook Logo.png">
+                    </a>
+                </li>
             </ul>
         </div>
-        </footer>
-    </body>
+    </footer>
+</body>
+
 </html>
