Did css style formatting for the store page. A couple of items are misaligned.

--- a/store.html
+++ b/store.html
@@ -15,104 +15,127 @@
                 <li><a href="discography.html">Discography</a></li>
                 <li><a href="band.html">Band</a></li>
                 <li><a href="tour.html">Tour</a></li>
-                <li><a href="store.html">Store</a></li>                    
+                <li><a href="store.html">Store</a></li>
             </ul>
         </nav>
         <h1 class="band-name band-name-large">Blind Guardian</h1>
     </header>
-    <section>
-        <h2>MUSIC</h2>
-        <div>
-            <div><strong>Live Beyond the Spheres</strong></div>
-            <img src="images\live-beyond-the-spheres-150x150.jpg" alt="">
-            <div>
-                <span>$20.99</span>
-                <button>ADD TO CART</button>
+    <section class="container content-section">
+        <h2 class="section-header">MUSIC</h2>
+        <div class="shop-items">
+            <div class="shop-item">
+                <span class="shop-item-title">Live Beyond the Spheres</span>
+                <img class="shop-item-image" src="images\live-beyond-the-spheres-150x150.jpg" alt="">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$20.99</span>
+                    <button class="btn btn-primary shop-item-btn">ADD TO CART</button>
+                </div>
             </div>
-        </div>
 
-        <div>
-            <div><strong>Beyond the Red Mirror</strong></div>
-            <img src="images/beyond_the_red_mirror_earbook-150x150.jpg" alt="">
-            <div>
-                <span>$17.99</span>
-                <button>ADD TO CART</button>
+            <div class="shop-item">
+                <span class="shop-item-title">Beyond the Red Mirror</span>
+                <img class="shop-item-image" src="images/beyond_the_red_mirror_earbook-150x150.jpg" alt="">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$17.99</span>
+                    <button class="btn btn-primary shop-item-btn">ADD TO CART</button>
+                </div>
             </div>
-        </div>
 
-        <div>
-            <div><strong>Memories of a Time to Come</strong></div>
-            <img src="images/memoriesofatimetocome-small.jpg" alt="">
-            <div>
-                <span>$15.99</span>
-                <button>ADD TO CART</button>
+            <div class="shop-item">
+                <span class="shop-item-title">Memories of a Time to Come</span>
+                <img class="shop-item-image" src="images/memoriesofatimetocome-small.jpg" alt="">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$15.99</span>
+                    <button class="btn btn-primary shop-item-btn">ADD TO CART</button>
+                </div>
             </div>
-        </div>
 
-        <div>
-            <div><strong>At the Edge of Time</strong></div>
-            <img src="images/attheedgeoftime-small.jpg" alt="">
-            <div>
-                <span>$13.99</span>
-                <button>ADD TO CART</button>
-            </div>
-        </div>
-
-    </section>
-    <section>
-        <h2>MERCH</h2>
-        <div>
-            <div><strong>Hoodie</strong></div>
-            <img src="images/beyondtheredmirror-hoodie.png" alt="">
-            <div>
-                <span>34.99</span>
-                <button>ADD TO CART</button>
-            </div>
-        </div>
-
-        <div>
-            <div><strong>Shirt</strong></div>
-            <img src="images/imaginationsfromtheotherside-shirt.png" alt="">
-            <div>
-                <span>$20.99</span>
-                <button>ADD TO CART</button>
+            <div class="shop-item">
+                <span class="shop-item-title">At the Edge of Time</span>
+                <img class="shop-item-image" src="images/attheedgeoftime-small.jpg" alt="">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$13.99</span>
+                    <button class="btn btn-primary shop-item-btn">ADD TO CART</button>
+                </div>
             </div>
         </div>
     </section>
-    <section>
-        <h2>CART</h2>
-        <div>
-            <strong>ITEM</strong>
-            &lt;&gt;
-            <strong>PRICE</strong>
-            &lt;&gt;
-            <strong>QUANTITY</strong>
+    <section class="container content-section">
+        <h2 class="section-header">MERCH</h2>
+        <div class="shop-items">
+            <div class="shop-item">
+                <span class="shop-item-title">Hoodie</span>
+                <img class="shop-item-image" src="images/beyondtheredmirror-hoodie.png" alt="">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">34.99</span>
+                    <button class="btn btn-primary shop-item-btn">ADD TO CART</button>
+                </div>
+            </div>
+
+            <div class="shop-item">
+                <span class="shop-item-title">Shirt</span>
+                <img class="shop-item-image" src="images/imaginationsfromtheotherside-shirt.png" alt="">
+                <div class="shop-item-details">
+                    <span class="shop-item-price">$20.99</span>
+                    <button class="btn btn-primary shop-item-btn">ADD TO CART</button>
+                </div>
+            </div>
         </div>
-        <div>
-            <img src="images/imaginationsfromtheotherside-shirt.png" width="100">
-            <span>Shirt</span>
-            &lt;&gt;
-            <span>$20.99</span>
-            &lt;&gt;
-            <input type="number" value="1">
-            <button>REMOVE</button>
+    </section>
+    <section class="containter content-section">
+        <h2 class="section-header">CART</h2>
+        <div class="cart-row">
+            <span class="cart-item cart-header cart-column">ITEM</span>
+            <span class="cart-price cart-header cart-column">PRICE</span>
+            <span class="cart-quantity cart-header cart-column">QUANTITY</span>
         </div>
 
-        <div>
-            <img src="images/beyondtheredmirror-hoodie.png" width="100">
-            <span>Shirt</span>
-            &lt;&gt;
-            <span>$34.99</span>
-            &lt;&gt;
-            <input type="number" value="1">
-            <button>REMOVE</button>
+
+
+        <div class="cart-items">
+            <div class="cart-row">
+                <div class="cart-item cart-column">
+                    <img class="cart-item-image" src="images/imaginationsfromtheotherside-shirt.png" width="100">
+                    <span class="cart-item-title">Shirt</span>
+                </div>
+                <span class="cart-price cart-column">$20.99</span>
+                <div class="cart-quantity cart-column">
+                    <input class="cart-quantity-input" type="number" value="1">
+                    <button class="btn btn-danger">REMOVE</button>
+                </div>
+            </div>
+
+
+
+            <div class="cart-row">
+                <div class="cart-item cart-column">
+                    <img class="cart-item-image" src="images/beyondtheredmirror-hoodie.png" width="100">
+                    <span class="cart-item-title">Hoody</span>
+                </div>
+                <span class="cart-price cart-column">$34.99</span>
+                <div class="cart-quantity cart-column">
+                    <input class="cart-quantity-input" type="number" value="1">
+                    <button class="btn btn-danger">REMOVE</button>
+                </div>
+            </div>
         </div>
-        <hr>
-        <div>
-            <strong>TOTAL</strong>
-            <span>$55.98</span>
+
+
+
+
+
+        <div class="cart-total">
+            <strong class="cart-total-title">TOTAL</strong>
+            <span class="cart-total-price">$55.98</span>
         </div>
-        <button>PURCHASE</button>
+
+
+        <button class="btn btn-primary btn-purchase">PURCHASE</button>
+
+
+
+
+
     </section>
     <footer class="main-footer">
         <div class="containter main-footer-container">
