Completed the css styling of the Discography page. Fixed the tour tour html tag.

--- a/tour.html
+++ b/tour.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Blind Guardian</title>
+    <title>Blind Guardian | Tour</title>
     <link rel="stylesheet" href="styles.css">
     <meta name="description" content="This is the description">
 </head>
