Worked on the javascript for managing the cart on the store page. Now able to add and remove items, increase and decrease quantity of an item, and have the cart total constantly update

--- a/store.html
+++ b/store.html
@@ -5,6 +5,7 @@
     <title>Blind Guardian | Store</title>
     <meta name="description" content="This is the description">
     <link rel="stylesheet" href="styles.css">
+    <script src="store.js" async></script>
 </head>
 
 <body>
@@ -90,51 +91,16 @@
             <span class="cart-quantity cart-header cart-column">QUANTITY</span>
         </div>
 
-
-
         <div class="cart-items">
-            <div class="cart-row">
-                <div class="cart-item cart-column">
-                    <img class="cart-item-image" src="images/imaginationsfromtheotherside-shirt.png" width="100">
-                    <span class="cart-item-title">Shirt</span>
-                </div>
-                <span class="cart-price cart-column">$20.99</span>
-                <div class="cart-quantity cart-column">
-                    <input class="cart-quantity-input" type="number" value="1">
-                    <button class="btn btn-danger">REMOVE</button>
-                </div>
-            </div>
-
-
-
-            <div class="cart-row">
-                <div class="cart-item cart-column">
-                    <img class="cart-item-image" src="images/beyondtheredmirror-hoodie.png" width="100">
-                    <span class="cart-item-title">Hoody</span>
-                </div>
-                <span class="cart-price cart-column">$34.99</span>
-                <div class="cart-quantity cart-column">
-                    <input class="cart-quantity-input" type="number" value="1">
-                    <button class="btn btn-danger">REMOVE</button>
-                </div>
-            </div>
+            
         </div>
-
-
-
-
 
         <div class="cart-total">
             <strong class="cart-total-title">TOTAL</strong>
-            <span class="cart-total-price">$55.98</span>
+            <span class="cart-total-price">$0</span>
         </div>
 
-
         <button class="btn btn-primary btn-purchase">PURCHASE</button>
-
-
-
-
 
     </section>
     <footer class="main-footer">
