--- a/band.html
+++ b/band.html
@@ -20,59 +20,90 @@
         <h1 class="band-name band-name-large">Blind Guardian</h1>
     </header>
 
-    <section>
-        <h2>Hansi Kürsch</h2>
-        <div>
-            <img src="images/hansiKursch.pgn.jpg">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Tincidunt augue interdum velit euismod in. Leo a diam sollicitudin tempor id eu
-                nisl nunc mi. Eu scelerisque felis imperdiet proin fermentum leo vel. Amet aliquam id diam maecenas
-                ultricies mi eget mauris pharetra. Pharetra convallis posuere morbi leo urna molestie. Diam maecenas
-                ultricies mi eget mauris pharetra et ultrices. Facilisis sed odio morbi quis commodo odio. Quis
-                imperdiet massa tincidunt nunc. Risus quis varius quam quisque id diam vel.</p>
+    <section class="content-section container">
+        <h2 class="section-header">Band Members</h2>
+
+        <div class="band-items">
+
+            <div class="band-item">
+                <div class="band-align-left">
+                    <span class="band-member-title">Hansi Kürsch</span>
+                    <p class="band-member-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et
+                        dolore magna aliqua.<img class="band-member-image band-image-right"
+                            src="images/hansiKursch.pgn.jpg"> Est placerat in egestas erat imperdiet sed euismod nisi.
+                        Ut etiam sit amet nisl
+                        purus in. Dolor morbi non arcu risus quis varius. Lorem dolor sed viverra ipsum. Ut morbi
+                        tincidunt
+                        augue interdum velit euismod in pellentesque massa. Gravida quis blandit turpis cursus. Nam
+                        libero justo
+                        laoreet sit amet. Ac tincidunt vitae semper quis. Id consectetur purus ut faucibus pulvinar
+                        elementum.
+                        Sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Ut diam quam nulla
+                        porttitor
+                        massa. Commodo viverra maecenas accumsan lacus vel.
+                    </p>
+                </div>
+            </div>
+
+            <div class="band-item">
+                <div class="band-align-left">
+                    <span class="band-member-title">Andrè Olbrich</span>
+                    <p class="band-member-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. <img class="band-member-image band-image-left"
+                            src="images/andreOlbrich.pgn.jpg">Quisque egestas diam in arcu. Lobortis scelerisque
+                        fermentum dui faucibus in. Et leo duis ut diam quam nulla porttitor massa id. Nam at lectus urna
+                        duis. Eu ultrices vitae auctor eu. Aliquam ut porttitor leo a diam. Placerat vestibulum lectus
+                        mauris ultrices eros in. Egestas sed tempus urna et pharetra pharetra massa massa. Iaculis nunc
+                        sed augue lacus viverra vitae congue eu consequat. Volutpat ac tincidunt vitae semper quis
+                        lectus nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus.
+                    </p>
+                </div>
+            </div>
+
+            <div class="band-item">
+                <div class="band-align-left">
+                    <span class="band-member-title">Marcus Siepen</span>
+                    <p class="band-member-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et
+                        dolore
+                        magna aliqua. At tellus at urna condimentum mattis pellentesque id nibh. Elit eget gravida cum
+                        sociis
+                        natoque penatibus et. Sed pulvinar proin gravida hendrerit lectus. <img
+                            class="band-member-image band-image-right" src="images/marcusSiepen.pgn.jpg">Arcu vitae
+                        elementum curabitur vitae
+                        nunc
+                        sed. Mattis nunc sed blandit libero. Enim nec dui nunc mattis enim ut tellus. Velit sed
+                        ullamcorper
+                        morbi
+                        tincidunt ornare massa eget egestas. Amet mauris commodo quis imperdiet massa. Consequat id
+                        porta nibh
+                        venenatis cras sed felis. Suspendisse sed nisi lacus sed viverra. Elementum curabitur vitae nunc
+                        sed
+                        velit
+                        dignissim sodales.</p>
+                </div>
+            </div>
+
+            <div class="band-item">
+                <div class="band-align-left">
+                    <span class="band-member-title">Frederik Ehmke</span>
+                    <p class="band-member-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. <img class="band-member-image band-image-left"
+                            src="images/frederikEhmke.pgn.jpg">Quisque egestas diam in arcu. Lobortis scelerisque
+                        fermentum dui faucibus in. Et leo duis ut diam quam nulla porttitor massa id. Nam at lectus urna
+                        duis. Eu ultrices vitae auctor eu. Aliquam ut porttitor leo a diam. Placerat vestibulum lectus
+                        mauris ultrices eros in. Egestas sed tempus urna et pharetra pharetra massa massa. Iaculis nunc
+                        sed augue lacus viverra vitae congue eu consequat. Volutpat ac tincidunt vitae semper quis
+                        lectus nulla. Viverra suspendisse potenti nullam ac tortor vitae purus faucibus.
+                    </p>
+                </div>
+            </div>
         </div>
-        <hr>
-    </section>
-
-    <section>
-        <h2>Andrè Olbrich</h2>
-        <div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Est placerat in egestas erat imperdiet sed euismod nisi. Ut etiam sit amet nisl
-                purus in. Dolor morbi non arcu risus quis varius. Lorem dolor sed viverra ipsum. Ut morbi tincidunt
-                augue interdum velit euismod in pellentesque massa. Gravida quis blandit turpis cursus. Nam libero justo
-                laoreet sit amet. Ac tincidunt vitae semper quis. Id consectetur purus ut faucibus pulvinar elementum.
-                Sed ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Ut diam quam nulla porttitor
-                massa. Commodo viverra maecenas accumsan lacus vel.</p>
-            <img src="images/andreOlbrich.pgn.jpg">
-        </div>
-        <hr>
-    </section>
-
-    <h2>Marcus Siepen</h2>
-    <div>
-        <img src="images/marcusSiepen.pgn.jpg">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. At tellus at urna condimentum mattis pellentesque id nibh. Elit eget gravida cum sociis
-            natoque penatibus et. Sed pulvinar proin gravida hendrerit lectus. Arcu vitae elementum curabitur vitae nunc
-            sed. Mattis nunc sed blandit libero. Enim nec dui nunc mattis enim ut tellus. Velit sed ullamcorper morbi
-            tincidunt ornare massa eget egestas. Amet mauris commodo quis imperdiet massa. Consequat id porta nibh
-            venenatis cras sed felis. Suspendisse sed nisi lacus sed viverra. Elementum curabitur vitae nunc sed velit
-            dignissim sodales.</p>
-    </div>
-    <hr>
-    </section>
-
-    <h2>Frederik Ehmke</h2>
-    <div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua. Sagittis purus sit amet volutpat consequat. In eu mi bibendum neque egestas congue quisque
-            egestas. Accumsan sit amet nulla facilisi morbi tempus iaculis urna. Lobortis mattis aliquam faucibus purus
-            in massa. Gravida arcu ac tortor dignissim convallis. Ornare suspendisse sed nisi lacus sed viverra. Sit
-            amet mauris commodo quis imperdiet. Gravida quis blandit turpis cursus in hac. Vitae semper quis lectus
-            nulla at volutpat diam.</p>
-        <img src="images/frederikEhmke.pgn.jpg">
-    </div>
     </section>
 
     <footer class="main-footer">
