--- a/discography.html
+++ b/discography.html
@@ -27,7 +27,7 @@
         <div class="album-items">
 
             <div class="album-item">
-                <div class="album-details album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">Live Beyond the Spheres</span>
                     <span>Release: 2017</span>
                     <br>
@@ -41,7 +41,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">Beyond the Red Mirror</span>
                     <span>Release: 2015</span>
                     <br>
@@ -55,7 +55,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">Memories of a Time to Come</span>
                     <span>Release: 2012</span>
                     <br>
@@ -69,7 +69,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">At the Edge of Time</span>
                     <span>Release: 2010</span>
                     <br>
@@ -83,7 +83,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">A Twist in the Myth</span>
                     <span>Release: 2006</span>
                     <br>
@@ -97,7 +97,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">Live</span>
                     <span>Release: 2003</span>
                     <br>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">A Night at the Opera</span>
                     <span>Release: 2002</span>
                     <br>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">Nightfall in Middle-Earth</span>
                     <span>Release: 1998</span>
                     <br>
@@ -139,7 +139,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">The Forgotten Tales</span>
                     <span>Release: 1996</span>
                     <br>
@@ -153,7 +153,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">Imaginations from the Other Side</span>
                     <span>Release: 1995</span>
                     <br>
@@ -167,7 +167,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">Tokyo Tales</span>
                     <span>Release: 1993</span>
                     <br>
@@ -181,7 +181,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">Somewhere Far Beyond</span>
                     <span>Release: 1992</span>
                     <br>
@@ -195,7 +195,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">Tales from the Twilight World</span>
                     <span>Release: 1990</span>
                     <br>
@@ -209,7 +209,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-details album-align-right">
+                <div class="album-align-right">
                     <span class="album-title">Follow the Blind</span>
                     <span>Release: 1989</span>
                     <br>
@@ -223,7 +223,7 @@
             </div>
 
             <div class="album-item">
-                <div class="album-detals album-align-left">
+                <div class="album-align-left">
                     <span class="album-title">Battalions of Fear</span>
                     <span>Release: 1988</span>
                     <br>
