Updated the css for the home page. Renamed alignment based selectors to apply to more images on different pages.

--- a/discography.html
+++ b/discography.html
@@ -27,7 +27,7 @@
         <div class="album-items">
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">Live Beyond the Spheres</span>
                     <span>Release: 2017</span>
                     <br>
@@ -35,13 +35,13 @@
                     <br>
                     <span>Runtime: 2 hours 38 minutes 57 seconds </span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/live-beyond-the-spheres-150x150.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">Beyond the Red Mirror</span>
                     <span>Release: 2015</span>
                     <br>
@@ -49,13 +49,13 @@
                     <br>
                     <span>Runtime: 76 minutes 42 seconds</span>
                 </div>
-                <div class=" album-align-left">
+                <div class=" item-align-left">
                     <img class="album-image" src="images/beyond_the_red_mirror_earbook-150x150.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">Memories of a Time to Come</span>
                     <span>Release: 2012</span>
                     <br>
@@ -63,13 +63,13 @@
                     <br>
                     <span>Runtime: 51 minutes 31 seconds </span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/memoriesofatimetocome-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">At the Edge of Time</span>
                     <span>Release: 2010</span>
                     <br>
@@ -77,13 +77,13 @@
                     <br>
                     <span>Runtime: 63 minutes 58 seconds </span>
                 </div>
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <img class="album-image" src="images/attheedgeoftime-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">A Twist in the Myth</span>
                     <span>Release: 2006</span>
                     <br>
@@ -91,13 +91,13 @@
                     <br>
                     <span>Runtime: 51 minutes 31 seconds </span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/atwistinthemyth-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">Live</span>
                     <span>Release: 2003</span>
                     <br>
@@ -105,13 +105,13 @@
                     <br>
                     <span>Runtime: 1 hour 73 minutes 50 seconds </span>
                 </div>
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <img class="album-image" src="images/live-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">A Night at the Opera</span>
                     <span>Release: 2002</span>
                     <br>
@@ -119,13 +119,13 @@
                     <br>
                     <span>Runtime: 1 hour 6 minutes 59 seconds </span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/opera-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">Nightfall in Middle-Earth</span>
                     <span>Release: 1998</span>
                     <br>
@@ -133,13 +133,13 @@
                     <br>
                     <span>Runtime: 1 hour 5 minutes 29 seconds </span>
                 </div>
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <img class="album-image" src="images/nightfall-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">The Forgotten Tales</span>
                     <span>Release: 1996</span>
                     <br>
@@ -147,13 +147,13 @@
                     <br>
                     <span>Runtime: 45 minutes 24 seconds </span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/forgottentales-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">Imaginations from the Other Side</span>
                     <span>Release: 1995</span>
                     <br>
@@ -161,13 +161,13 @@
                     <br>
                     <span>Runtime: 48 minutes 56 seconds </span>
                 </div>
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <img class="album-image" src="images/imaginationsfromother-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">Tokyo Tales</span>
                     <span>Release: 1993</span>
                     <br>
@@ -175,13 +175,13 @@
                     <br>
                     <span>Runtime: 1 hour 8 minutes 1 second </span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/tokyotales-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">Somewhere Far Beyond</span>
                     <span>Release: 1992</span>
                     <br>
@@ -189,13 +189,13 @@
                     <br>
                     <span>Runtime: 55 minutes 4 seconds </span>
                 </div>
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <img class="album-image" src="images/somewherefarbeyond-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">Tales from the Twilight World</span>
                     <span>Release: 1990</span>
                     <br>
@@ -203,13 +203,13 @@
                     <br>
                     <span>Runtime: 44 minutes 2 seconds</span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/talesfromtwillight-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <span class="album-title">Follow the Blind</span>
                     <span>Release: 1989</span>
                     <br>
@@ -217,13 +217,13 @@
                     <br>
                     <span>Runtime: 43 minutes 2 seconds </span>
                 </div>
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <img class="album-image" src="images/followtheblind-small.jpg">
                 </div>
             </div>
 
             <div class="album-item">
-                <div class="album-align-left">
+                <div class="item-align-left">
                     <span class="album-title">Battalions of Fear</span>
                     <span>Release: 1988</span>
                     <br>
@@ -231,7 +231,7 @@
                     <br>
                     <span>Runtime: 39 minutes 1 second</span>
                 </div>
-                <div class="album-align-right">
+                <div class="item-align-right">
                     <img class="album-image" src="images/batalionsofear-small.jpg">
                 </div>
             </div>           
