--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </header>
     <section class="content-section container">
         <h2 class="section-header">ABOUT</h2>
-        <img class="about-band-image" src="images/band members.png">
         <P>
+            <img class="about-band-image item-align-left" src="images/band members.png">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ipsum consequat nisl vel pretium lectus quam id. Eget lorem dolor sed viverra ipsum
             nunc aliquet. Dui nunc mattis enim ut tellus elementum sagittis vitae. Massa placerat duis ultricies lacus
@@ -43,6 +43,27 @@
             scelerisque purus semper eget. Scelerisque viverra mauris in aliquam sem fringilla ut. Eget dolor morbi non
             arcu. Pharetra magna ac placerat vestibulum. Viverra orci sagittis eu volutpat odio facilisis mauris. Fames
             ac turpis egestas integer. Nunc vel risus commodo viverra.
+        </p>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis auctor elit sed vulputate mi sit amet. Nec ullamcorper sit amet risus nullam eget.
+            Posuere morbi leo urna molestie at elementum. Nisi est sit amet facilisis. Volutpat est velit egestas dui id
+            ornare. Nec tincidunt praesent semper feugiat nibh sed pulvinar proin gravida. Massa ultricies mi quis
+            hendrerit dolor magna eget est. Nisl pretium fusce id velit ut. Vulputate enim nulla aliquet porttitor.
+            <img class="about-band-image item-align-right" src="images/blindguardianold.png">
+
+        </p>
+        <p>
+            Tristique et egestas quis ipsum suspendisse. Facilisis volutpat est velit egestas. Eu facilisis sed odio
+            morbi quis commodo odio aenean. Et leo duis ut diam quam nulla porttitor massa id. Ultrices in iaculis nunc
+            sed augue lacus viverra vitae congue. Ornare lectus sit amet est. Commodo elit at imperdiet dui accumsan
+            sit. Leo urna molestie at elementum eu facilisis sed odio morbi. Ut sem viverra aliquet eget sit. Malesuada
+            fames ac turpis egestas maecenas. Massa vitae tortor condimentum lacinia quis vel. Sit amet cursus sit amet
+            dictum sit amet justo donec. Diam vel quam elementum pulvinar etiam non quam. Sit amet venenatis urna cursus
+            eget nunc. Purus semper eget duis at tellus at. Aliquam purus sit amet luctus venenatis lectus magna
+            fringilla. Ac turpis egestas integer eget. Risus in hendrerit gravida rutrum quisque non tellus orci ac.
+            Dictumst quisque sagittis purus sit amet volutpat consequat mauris.
         </p>
     </section>
     <footer class="main-footer">
